@@ -1,6 +1,14 @@
 Changes
 -------
 
+pending release
+^^^^^^^^^^^^^^^^^^^
+
+* Fix timed out MySQL 8.0 connections raising InternalError rather than OperationalError #660
+* Fix timed out MySQL 8.0 connections being returned from Pool #660
+* Ensure connections are properly closed before raising OperationalError when the server connection is lost #660
+
+
 0.0.22 (2021-11-14)
 ^^^^^^^^^^^^^^^^^^^
 
